--- a/src/report/MWReport.jrxml
+++ b/src/report/MWReport.jrxml
@@ -9,12 +9,14 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="ireport.zoom" value="1.6105100000000045"/>
+	<property name="ireport.zoom" value="1.6105100000000068"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="mrcode" class="java.lang.String"/>
-	<field name="supplier" class="java.lang.String"/>
+	<parameter name="mwcode" class="java.lang.String"/>
 	<field name="date" class="java.lang.String"/>
+	<field name="businessno" class="java.lang.String"/>
+	<field name="purpose" class="java.lang.String"/>
+	<field name="destination" class="java.lang.String"/>
 	<field name="quantity" class="java.lang.String"/>
 	<field name="unit" class="java.lang.String"/>
 	<field name="unitcost" class="java.lang.String"/>
@@ -37,7 +39,7 @@
 				<text><![CDATA[LOZADA GROUP OF COMPANIES]]></text>
 			</staticText>
 			<image>
-				<reportElement x="20" y="10" width="45" height="40" uuid="b3a72dc9-526a-4a33-849f-279230dc5451"/>
+				<reportElement x="20" y="0" width="45" height="40" uuid="b3a72dc9-526a-4a33-849f-279230dc5451"/>
 				<imageExpression><![CDATA["J:/Dev Project/lozadacompany/src/lozadagroupcompany/logo-64.png"]]></imageExpression>
 			</image>
 			<staticText>
@@ -57,9 +59,9 @@
 			<staticText>
 				<reportElement x="393" y="10" width="162" height="20" uuid="bba9269e-120a-49de-b9db-24d7ad068bc2"/>
 				<textElement>
-					<font fontName="Lato Black" size="13" isBold="true"/>
+					<font fontName="Lato Black" size="10" isBold="true"/>
 				</textElement>
-				<text><![CDATA[MERCHADISE RECEIPT]]></text>
+				<text><![CDATA[MERCHANDISE WITHDRAWAL]]></text>
 			</staticText>
 			<line>
 				<reportElement x="0" y="60" width="555" height="1" uuid="1942b37b-6c40-49de-a038-0edc021a459b"/>
@@ -67,38 +69,31 @@
 					<pen lineWidth="2.0"/>
 				</graphicElement>
 			</line>
-			<textField>
-				<reportElement x="393" y="30" width="150" height="30" forecolor="#FF6600" uuid="2a547171-366b-4e68-ab26-678a6c2e1218"/>
-				<textElement>
-					<font fontName="Lato Black" size="22"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$P{mrcode}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="183" y="69" width="187" height="21" uuid="a3e79149-f984-49f0-b343-32a141b3de11"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
-				<text><![CDATA[MERCHADISE RECEIPT FORM (FUEL)]]></text>
+				<text><![CDATA[MERCHANDISE WITHDRAWAL FORM (FUEL)]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="393" y="31" width="160" height="29" forecolor="#FF6600" uuid="faa7ed61-3a9c-4f6a-a7cb-58749569f59f"/>
+				<textElement>
+					<font size="16" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$P{mwcode}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="22" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="0" width="70" height="21" uuid="fad5ce65-0a11-4ba6-a6ef-40bf077517c1"/>
+				<reportElement x="0" y="0" width="70" height="20" uuid="fad5ce65-0a11-4ba6-a6ef-40bf077517c1"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
-				<text><![CDATA[SUPPLIER :]]></text>
+				<text><![CDATA[BUSINESS NO :]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="70" y="0" width="85" height="21" forecolor="#FF6600" uuid="6b6e0e5e-d8cd-4213-b2c2-4cc61c473499"/>
-				<textElement>
-					<font fontName="Lato Black" size="10"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{supplier}]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="393" y="0" width="70" height="21" uuid="5a40ef74-72c9-4593-a65c-53d030d58791"/>
 				<textElement>
@@ -106,15 +101,50 @@
 				</textElement>
 				<text><![CDATA[DATE :]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="463" y="1" width="92" height="20" forecolor="#FF6600" uuid="40ea1a57-35fd-445f-9b60-ab914aeab807"/>
+			<staticText>
+				<reportElement x="-1" y="20" width="70" height="14" uuid="38e2ca2e-ec97-4953-8bcf-6449a23bc21f"/>
 				<textElement>
-					<font fontName="Lato Black"/>
+					<font fontName="Lato Black" size="10"/>
+				</textElement>
+				<text><![CDATA[PURPOSE :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="-1" y="40" width="80" height="14" uuid="e4713e79-6705-4403-bbc0-f69c0b6cdb67"/>
+				<textElement>
+					<font fontName="Lato Black" size="10"/>
+				</textElement>
+				<text><![CDATA[DESTINATION :]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="83" y="0" width="100" height="20" forecolor="#FF6600" uuid="10c555a5-8788-4cb4-ae17-7e011c0d27dd"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{businessno}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="83" y="20" width="100" height="20" forecolor="#FF6600" uuid="edac3db5-da77-4f15-9065-ac0723ad9aab"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{purpose}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="83" y="40" width="100" height="20" forecolor="#FF6600" uuid="95bc402a-ded7-4bde-be8b-443a2e3262f8"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{destination}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="463" y="0" width="100" height="20" forecolor="#FF6600" uuid="d78107b2-dd55-4099-9db9-017e714981dc"/>
+				<textElement>
+					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{date}]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement x="0" y="21" width="555" height="1" uuid="17292413-a30a-4d15-9e00-fbdf17345cb8"/>
+				<reportElement x="0" y="60" width="555" height="1" uuid="17292413-a30a-4d15-9e00-fbdf17345cb8"/>
 				<graphicElement>
 					<pen lineWidth="2.0"/>
 				</graphicElement>
@@ -122,114 +152,96 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="117" splitType="Stretch">
+		<band height="107" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="10" width="70" height="21" uuid="faa38ade-ea06-440e-abc6-ddd0624ba93d"/>
+				<reportElement x="4" y="0" width="70" height="21" uuid="faa38ade-ea06-440e-abc6-ddd0624ba93d"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Quantity]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="275" y="10" width="70" height="21" uuid="aaa0ae05-1a76-4202-9f39-983c94655537"/>
+				<reportElement x="300" y="0" width="70" height="21" uuid="aaa0ae05-1a76-4202-9f39-983c94655537"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Unit Cost]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="428" y="10" width="70" height="21" uuid="2af17738-36e8-4e7f-b07f-58b7d7d64efb"/>
+				<reportElement x="453" y="0" width="70" height="21" uuid="2af17738-36e8-4e7f-b07f-58b7d7d64efb"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Amount]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="145" y="10" width="70" height="21" uuid="446dfc4d-867e-4442-af02-b31999ecb839"/>
+				<reportElement x="140" y="0" width="70" height="21" uuid="446dfc4d-867e-4442-af02-b31999ecb839"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Unit]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="0" y="31" width="100" height="20" uuid="6e952a1a-549f-4ea9-8d5a-75bfde7eae91"/>
-				<textElement>
-					<font fontName="Lato" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{quantity}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="145" y="31" width="100" height="20" uuid="a60d0699-eed0-4e9f-98c7-c5eff21e95a1"/>
-				<textElement>
-					<font fontName="Lato" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="275" y="31" width="100" height="20" uuid="e52eb994-d67f-4d98-bac7-c27fb8e39674"/>
-				<textElement>
-					<font fontName="Lato" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{unitcost}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="428" y="31" width="100" height="20" uuid="f367f084-b343-4aac-bbd5-ba34fe6cd9fb"/>
-				<textElement>
-					<font fontName="Lato" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{totalamount}]]></textFieldExpression>
-			</textField>
 			<line>
-				<reportElement x="0" y="103" width="555" height="1" uuid="3da3c152-6b96-48e9-8fe4-318ba12e323d"/>
+				<reportElement x="-1" y="83" width="555" height="1" uuid="3da3c152-6b96-48e9-8fe4-318ba12e323d"/>
 				<graphicElement>
 					<pen lineWidth="2.0"/>
 				</graphicElement>
 			</line>
 			<staticText>
-				<reportElement x="30" y="104" width="481" height="13" uuid="dbe64de1-3a81-47a1-b264-c5aa0cf1b8fb"/>
+				<reportElement x="30" y="84" width="481" height="13" uuid="dbe64de1-3a81-47a1-b264-c5aa0cf1b8fb"/>
 				<text><![CDATA[*******************************************************NOTHING FOLLOWS*******************************************]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="4" y="21" width="100" height="20" uuid="eb851fbe-fcd1-4ffd-a049-220bbe4797c4"/>
+				<textFieldExpression><![CDATA[$F{quantity}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="140" y="21" width="100" height="20" uuid="15212f8f-f842-4b5b-af62-64d5039f3048"/>
+				<textFieldExpression><![CDATA[$F{unit}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="300" y="21" width="100" height="20" uuid="31b4452a-7802-4f17-99d1-52dcf52b0480"/>
+				<textFieldExpression><![CDATA[$F{unitcost}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="453" y="21" width="100" height="20" uuid="8be95657-a776-4ef9-83a2-294ac4bd0466"/>
+				<textFieldExpression><![CDATA[$F{totalamount}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
+		<band height="13" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<staticText>
-				<reportElement x="85" y="33" width="70" height="21" uuid="479358fb-0582-4ed5-9c4b-0a80284b6955"/>
+				<reportElement x="109" y="22" width="70" height="21" uuid="479358fb-0582-4ed5-9c4b-0a80284b6955"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Requested By]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="345" y="33" width="70" height="21" uuid="ee6f6d48-23f9-4f3d-8e8f-b5dd8a94a7d3"/>
+				<reportElement x="369" y="22" width="70" height="21" uuid="ee6f6d48-23f9-4f3d-8e8f-b5dd8a94a7d3"/>
 				<textElement>
 					<font fontName="Lato Black" size="10"/>
 				</textElement>
 				<text><![CDATA[Approved By]]></text>
 			</staticText>
 			<line>
-				<reportElement x="30" y="32" width="173" height="1" uuid="fab671c5-62dd-4296-a29e-ada3ff8b3222"/>
+				<reportElement x="54" y="21" width="173" height="1" uuid="fab671c5-62dd-4296-a29e-ada3ff8b3222"/>
+			</line>
+			<line>
+				<reportElement x="314" y="20" width="173" height="1" uuid="83258ab0-4ca0-4d9f-b4f5-5ace367c09ef"/>
 			</line>
 			<textField>
-				<reportElement x="0" y="13" width="244" height="18" uuid="f8887a7c-2712-408f-aba3-a51ea4a6520b"/>
-				<textElement textAlignment="Center">
-					<font fontName="Lato" size="12"/>
-				</textElement>
+				<reportElement x="93" y="0" width="100" height="20" uuid="d950c8ed-88ee-4690-8897-df3d660980fe"/>
 				<textFieldExpression><![CDATA[$F{requestedby}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="245" y="12" width="253" height="20" uuid="0ad73ee9-38d3-4e97-83d0-2aef8373faef"/>
-				<textElement textAlignment="Center">
-					<font fontName="Lato" size="12"/>
-				</textElement>
+				<reportElement x="358" y="0" width="100" height="20" uuid="df39692f-c380-42ff-a6ea-16cfaa751353"/>
 				<textFieldExpression><![CDATA[$F{approvedby}]]></textFieldExpression>
 			</textField>
-			<line>
-				<reportElement x="290" y="31" width="173" height="1" uuid="83258ab0-4ca0-4d9f-b4f5-5ace367c09ef"/>
-			</line>
 		</band>
 	</pageFooter>
 	<summary>
